--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   background-size: cover;
   transition: background-image 2s ease-in-out;
 
-  & .modal {
+  /* & .modal {
     display: none;
     position: fixed;
     top: 0;
@@ -100,7 +100,7 @@ body {
     font-size: 1.6vh;
     border-radius: 1vh;
     }
-  }
+  } */
 
   & .mainPart {
     background-color: antiquewhite;
@@ -220,7 +220,6 @@ body {
     & .image-container:hover .image-title {
         opacity: 1;
     }
-  }
   & .gallery img {
       width: 100%;
       height: auto;
