--- a/style.css
+++ b/style.css
@@ -69,38 +69,51 @@ body {
   background-size: cover;
   transition: background-image 2s ease-in-out;
 
-  /* & .modal {
+  & .modal {
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.7);
-  }
+    background-color: rgba(0, 0, 0, 1);
+}
 
-  & .modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fefefe;
-    padding: 1.5vh;
-    text-align: center;
-    border-radius: 1vh;
-    font-size: 2vh;
-    border: 0.3vh black solid;
+& .modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999; /* Ensure the modal appears on top of other elements */
+}
 
-    & #continueButton {
-    border: 0.1vh black solid;
-    color: black;
-    padding: 0.7vh 1.5vh;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.6vh;
-    border-radius: 1vh;
-    }
-  } */
+& .modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 1.5vh;
+  text-align: center;
+  border-radius: 1vh;
+  font-size: 2vh;
+  border: 0.3vh black solid;
+  z-index: 1000; /* Ensure the modal content appears on top of the modal background */
+}
+
+& #continueButton {
+  border: 0.1vh black solid;
+  color: black;
+  padding: 0.7vh 1.5vh;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.6vh;
+  border-radius: 1vh;
+  cursor: pointer; /* Add cursor pointer for better user interaction */
+}
 
   & .mainPart {
     background-color: antiquewhite;
@@ -192,8 +205,6 @@ body {
     margin: 4vh;
     margin-top: 10vh;
 }
-
-
     & .image-container {
       position: relative;
       overflow: hidden;
