--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,318 +1,346 @@
+/* Resetting default styles for all elements */
 * {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0; /* Reset margin */
+  padding: 0; /* Reset padding */
+  font-family: Arial, Helvetica, sans-serif; /* Set default font family */
 }
 
+/* Styling for the header section */
 header {
-  background-image: url("../images/background/headerBackgroundImage.png");
-  background-size: cover;
-  background-position: 60%;
-  border-bottom: 0.5vh solid black;
-  height: 4vh;
-  border: black 0.5vh solid;
-  border-radius: 1.5vh;
-  margin: 2vh 35vh 1vh;
-  padding: 1vh 0;
-  
+  background-image: url("../images/background/headerBackgroundImage.png"); /* Background image */
+  background-size: cover; /* Cover the entire background */
+  background-position: 60%; /* Position the background image */
+  border-bottom: 0.5vh solid black; /* Bottom border */
+  height: 4vh; /* Set height */
+  border: black 0.5vh solid; /* Border style */
+  border-radius: 1.5vh; /* Border radius */
+  margin: 2vh 35vh 1vh; /* Margin */
+  padding: 1vh 0; /* Padding */
+
   h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3vh;
+    display: flex; /* Make the heading a flex container */
+    justify-content: center; /* Center align the content horizontally */
+    align-items: center; /* Center align the content vertically */
+    font-size: 3vh; /* Font size */
   }
 }
 
+/* Styling for the body section */
 body {
-  background-image: url("../images/background/qQiK21B.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  transition: background-image 2s ease-in-out;
+  background-image: url("../images/background/qQiK21B.jpg"); /* Background image */
+  background-repeat: no-repeat; /* Prevent background image from repeating */
+  background-attachment: fixed; /* Fix the background image */
+  background-size: cover; /* Cover the entire background */
+  transition: background-image 2s ease-in-out; /* Transition effect for background image */
 
+  /* Styling for navigation bar when idle */
   .hoidleNav {
-    margin: 0 40vh;
+    margin: 0 40vh; /* Margin */
   }
 
+  /* Styling for navigation bar */
   nav {
-    border: black 0.75vh solid;
-    border-radius: 2vh;
-    margin: 2vh 35vh 1vh;
+    border: black 0.75vh solid; /* Border style */
+    border-radius: 2vh; /* Border radius */
+    margin: 2vh 35vh 1vh; /* Margin */
 
+    /* Styling for the top navigation bar */
     .topnav {
-      overflow: hidden;
-      border-radius: 1vh;
-      width: 100%;
-      background-color: gray;
-      border-top: 0;
-      display: flex;
+      overflow: hidden; /* Hide overflowing content */
+      border-radius: 1vh; /* Border radius */
+      width: 100%; /* Set width */
+      background-color: gray; /* Background color */
+      border-top: 0; /* Remove top border */
+      display: flex; /* Make it a flex container */
 
+      /* Styling for links in the navigation bar */
       a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        float: left;
-        color: #f2f2f2;
-        padding: 1.5vh 1.7vh;
-        text-decoration: none;
-        font-size: 2.5vh;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        display: flex; /* Make it a flex container */
+        justify-content: center; /* Center align the content horizontally */
+        align-items: center; /* Center align the content vertically */
+        float: left; /* Float the elements to the left */
+        color: #f2f2f2; /* Text color */
+        padding: 1.5vh 1.7vh; /* Padding */
+        text-decoration: none; /* Remove underline */
+        font-size: 2.5vh; /* Font size */
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Font family */
 
+        /* Styling for specific link widths */
         &.btn-width {
-          box-sizing: border-box;
-          width: 25%;
+          box-sizing: border-box; /* Include border and padding in the element's total width and height */
+          width: 25%; /* Set width */
         }
 
         &.width {
-          box-sizing: border-box;
-          width: 20%;
+          box-sizing: border-box; /* Include border and padding in the element's total width and height */
+          width: 20%; /* Set width */
         }
 
         &.special,
         &.special-hoidle {
-          box-sizing: border-box;
-          width: 30%;
-          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-          font-size: 3vh;
-          color: black;
-          border-left: black 0.5vh solid;
-          border-right: black 0.5vh solid;
-          background-color: lightgoldenrodyellow;
+          box-sizing: border-box; /* Include border and padding in the element's total width and height */
+          width: 30%; /* Set width */
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; /* Font family */
+          font-size: 3vh; /* Font size */
+          color: black; /* Text color */
+          border-left: black 0.5vh solid; /* Left border */
+          border-right: black 0.5vh solid; /* Right border */
+          background-color: lightgoldenrodyellow; /* Background color */
         }
 
         &.special-hoidle {
-          width: 50%;
+          width: 50%; /* Set width */
         }
 
         &.active {
-          background-color: #04AA6D;
-          color: white;
+          background-color: #04AA6D; /* Background color */
+          color: white; /* Text color */
         }
 
         &:hover {
-          background-color: #ddd;
-          color: black;
+          background-color: #ddd; /* Background color on hover */
+          color: black; /* Text color on hover */
         }
 
+        /* Styling for special links on hover */
         &.special:hover,
         &.special-hoidle:hover {
-          background-color: blue;
-          color: white;
+          background-color: blue; /* Background color on hover */
+          color: white; /* Text color on hover */
         }
       }
     }
   }
 
+  /* Styling for flex container */
   .flex-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 2vh;
+    display: flex; /* Make it a flex container */
+    justify-content: space-between; /* Distribute space evenly between flex items */
+    align-items: center; /* Center align the content vertically */
+    margin-top: 2vh; /* Margin */
   }
 
+  /* Styling for modal */
   .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 999;
-
+    display: none; /* Hide modal by default */
+    position: fixed; /* Position */
+    top: 0; /* Position from top */
+    left: 0; /* Position from left */
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0, 0, 0, 0.7); /* Background color with opacity */
+    z-index: 999; /* Z-index */
+    
+    /* Styling for modal content */
     .modal-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #fefefe;
-      padding: 1.5vh;
-      text-align: center;
-      border-radius: 1vh;
-      font-size: 2vh;
-      border: 0.3vh black solid;
-      z-index: 1000;
+      position: absolute; /* Position */
+      top: 50%; /* Position from top */
+      left: 50%; /* Position from left */
+      transform: translate(-50%, -50%); /* Center align horizontally and vertically */
+      background-color: #fefefe; /* Background color */
+      padding: 1.5vh; /* Padding */
+      text-align: center; /* Center align text */
+      border-radius: 1vh; /* Border radius */
+      font-size: 2vh; /* Font size */
+      border: 0.3vh black solid; /* Border style */
+      z-index: 1000; /* Z-index */
     }
 
+    /* Styling for continue button */
     #continueButton {
-      border: 0.1vh black solid;
-      color: black;
-      padding: 0.7vh 1.5vh;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 1.6vh;
-      border-radius: 1vh;
-      cursor: pointer;
+      border: 0.1vh black solid; /* Border style */
+      color: black; /* Text color */
+      padding: 0.7vh 1.5vh; /* Padding */
+      text-decoration: none; /* Remove underline */
+      display: inline-block; /* Make it an inline-block element */
+      font-size: 1.6vh; /* Font size */
+      border-radius: 1vh; /* Border radius */
+      cursor: pointer; /* Cursor style */
     }
   }
 
+  /* Styling for the main part */
   .mainPart {
-    background-color: antiquewhite;
-    opacity: 75%;
-    border: black 0.5vh solid;
-    border-radius: 3vh;
-    margin: 2vh 5vh 1vh;
-    padding: 1vh;
-    overflow-y: auto;
-    max-height: 70vh;
+    background-color: antiquewhite; /* Background color */
+    opacity: 75%; /* Opacity */
+    border: black 0.5vh solid; /* Border style */
+    border-radius: 3vh; /* Border radius */
+    margin: 2vh 5vh 1vh; /* Margin */
+    padding: 1vh; /* Padding */
+    overflow-y: auto; /* Enable vertical scrollbar when needed */
+    max-height: 70vh; /* Maximum height */
 
+    /* Styling for scrollbar */
     scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
 
+    /* Styling for WIP class */
     .WIP {
-      font-size: 15vh;
-      text-align: center;
+      font-size: 15vh; /* Font size */
+      text-align: center; /* Center align text */
     }
 
     &::-webkit-scrollbar {
-      width: 1.2vh;
+      width: 1.2vh; /* Width */
     }
 
     &::-webkit-scrollbar-track {
-      background-color: #f1f1f1;
-      border: black 0.1vh solid;
-      border-radius: 0 2vh 2vh 0;
-      margin-top: 0.5vh;
-      margin-bottom: 0.5vh;
+      background-color: #f1f1f1; /* Background color */
+      border: black 0.1vh solid; /* Border style */
+      border-radius: 0 2vh 2vh 0; /* Border radius */
+      margin-top: 0.5vh; /* Margin top */
+      margin-bottom: 0.5vh; /* Margin bottom */
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 0 2vh 2vh 0;
+      background-color: #888; /* Background color */
+      border-radius: 0 2vh 2vh 0; /* Border radius */
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background-color: #555;
+      background-color: #555; /* Background color on hover */
     }
 
+    /* Styling for bigAssText class */
     .bigAssText {
-      font-size: 4vh;
+      font-size: 4vh; /* Font size */
     }
 
+    /* Styling for biggestAssText class */
     .biggestAssText {
-      font-size: 8vh;
-      text-align: center;
+      font-size: 8vh; /* Font size */
+      text-align: center; /* Center align text */
     }
 
     p {
-      font-size: 2.5vh;
-      padding-left: 1vh;
-      opacity: 100%;
+      font-size: 2.5vh; /* Font size */
+      padding-left: 1vh; /* Padding left */
+      opacity: 100%; /* Opacity */
     }
 
+    /* Styling for Contact class */
     .Contact {
       a {
-        text-decoration: none;
-        color: green;
+        text-decoration: none; /* Remove underline */
+        color: green; /* Text color */
       }
     }
 
+    /* Styling for table */
     table {
-      max-width: 115vh;
-      margin: auto;
-      font-size: 2vh;
+      max-width: 115vh; /* Maximum width */
+      margin: auto; /* Center align */
+      font-size: 2vh; /* Font size */
 
       tr {
         th {
-          border-bottom: 0.1vh black solid;
-          border-left: 0.1vh black solid;
+          border-bottom: 0.1vh black solid; /* Bottom border */
+          border-left: 0.1vh black solid; /* Left border */
         }
 
         td {
-          border-bottom: 0.1vh black solid;
-          border-left: 0.1vh black solid;
-          text-align: center;
+          border-bottom: 0.1vh black solid; /* Bottom border */
+          border-left: 0.1vh black solid; /* Left border */
+          text-align: center; /* Center align text */
 
           &.firstOne {
-            border-left: 0;
+            border-left: 0; /* Remove left border */
           }
         }
       }
     }
   }
 
+  /* Styling for ContactPart class */
   .ContactPart {
-    text-align: center;
+    text-align: center; /* Center align text */
   }
 
+  /* Styling for gallery */
   .gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2vh;
-    margin: 4vh;
-    margin-top: 2vh;
-    overflow-y: auto;
-    max-height: 75vh;
+    display: grid; /* Use grid layout */
+    grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
+    gap: 2vh; /* Gap between grid items */
+    margin: 4vh; /* Margin */
+    margin-top: 2vh; /* Margin top */
+    overflow-y: auto; /* Enable vertical scrollbar when needed */
+    max-height: 75vh; /* Maximum height */
 
+    /* Styling for scrollbar */
     scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
 
     &::-webkit-scrollbar {
-      width: 1.2vh;
+      width: 1.2vh; /* Width */
     }
 
     &::-webkit-scrollbar-track {
-      background-color: #f1f1f1;
-      border: black 0.1vh solid;
-      border-radius: 1vh;
+      background-color: #f1f1f1; /* Background color */
+      border: black 0.1vh solid; /* Border style */
+      border-radius: 1vh; /* Border radius */
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 1vh;
+      background-color: #888; /* Background color */
+      border-radius: 1vh; /* Border radius */
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background-color: #555;
+      background-color: #555; /* Background color on hover */
     }
   }
 
+  /* Styling for image container */
   .image-container {
-    position: relative;
-    overflow: hidden;
-    border-radius: 2vh;
-    max-height: 40vh;
-    margin-right: 1vh;
+    position: relative; /* Position */
+    overflow: hidden; /* Hide overflowing content */
+    border-radius: 2vh; /* Border radius */
+    max-height: 40vh; /* Maximum height */
+    margin-right: 1vh; /* Margin right */
 
+    /* Styling for image title */
     .image-title {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      color: #fff;
-      margin: 0;
-      padding-top: 1vh;
-      padding-bottom: 1vh;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-      text-align: center;
-      font-size: 2vh;
+      position: absolute; /* Position */
+      bottom: 0; /* Position from bottom */
+      left: 0; /* Position from left */
+      width: 100%; /* Full width */
+      background: rgba(0, 0, 0, 0.7); /* Background color with opacity */
+      color: #fff; /* Text color */
+      margin: 0; /* Margin */
+      padding-top: 1vh; /* Padding top */
+      padding-bottom: 1vh; /* Padding bottom */
+      opacity: 0; /* Initial opacity */
+      transition: opacity 0.3s ease-in-out; /* Transition effect */
+      text-align: center; /* Center align text */
+      font-size: 2vh; /* Font size */
     }
 
     &:hover .image-title {
-      opacity: 1;
+      opacity: 1; /* Show image title on hover */
     }
   }
 
+  /* Styling for images in the gallery */
   .gallery img {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 2vh;
-    transition: transform 0.2s ease-in-out;
+    width: 100%; /* Full width */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Display as block element */
+    border-radius: 2vh; /* Border radius */
+    transition: transform 0.2s ease-in-out; /* Transition effect */
   }
 
+  /* Styling for images in the gallery on hover */
   .gallery img:hover {
-    transform: scale(1.1);
+    transform: scale(1.1); /* Scale image on hover */
   }
 }
 
 /* Media queries for smaller screens */
 @media only screen and (max-width: 768px) {
+  /* Adjustments for image title on smaller screens */
   .image-title {
-    font-size: 0.5vh;
-    padding-top: 0vh;
-    padding-bottom: 0vh;
+    font-size: 0.5vh; /* Font size */
+    padding-top: 0vh; /* Padding top */
+    padding-bottom: 0vh; /* Padding bottom */
   }
 }
