--- a/src/assets/css/infoStyle.css
+++ b/src/assets/css/infoStyle.css
@@ -19,13 +19,13 @@ body {
         background-size: cover;
         background-position: 60%;
         border-bottom: 0.5vh solid black;
-        height: 4vh;
+        height: 6vh;
         border: black 0.5vh solid;
         border-radius: 1.5vh;
         margin: 2vh 70vh 1vh;
-        padding: 1vh 0;
         text-align: center;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 2.5vh;
     }
 
     /* Styling for the parent container */
@@ -69,6 +69,12 @@ body {
             /* Styling for the heading */
             & h2 {
                 text-align: center;
+                font-size: 3vh;
+            }
+
+            & p{
+                font-size: 2vh;
+                padding-left: 0.3vh;
             }
         }
     }
