--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27,12 +27,48 @@ header {
 
 /* Styling for the body section */
 body {
-  background-image: url("../images/background/qQiK21B.jpg"); /* Background image */
+  background-image: url("../images/background/KasierLookingAtTheEiffelTower.jpg"); /* Background image */
   background-repeat: no-repeat; /* Prevent background image from repeating */
   background-attachment: fixed; /* Fix the background image */
   background-size: cover; /* Cover the entire background */
   transition: background-image 2s ease-in-out; /* Transition effect for background image */
 
+  /* & #settingsButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+    margin: 20px;
+    & #settingsImage{
+      max-width: 10vh;
+      max-height: 10vh;
+      width: 10vh;
+      height: 10vh;
+    }
+  }
+  
+  #settingsOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  #settingsWindow {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  #closeButton {
+    margin-top: 10px;
+  } */
+  
   /* Styling for navigation bar when idle */
   .hoidleNav {
     margin: 0 40vh; /* Margin */
