--- a/src/assets/css/legacy-darkTheme.css
+++ b/src/assets/css/legacy-darkTheme.css
@@ -2,7 +2,7 @@
 * {
     margin: 0; /* Reset margin */
     padding: 0; /* Reset padding */
-    font-family: Arial, Helvetica, sans-serif; /* Set default font family */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   /* Styling for the header section */
