--- a/src/assets/css/legacy-darkTheme.css
+++ b/src/assets/css/legacy-darkTheme.css
@@ -26,6 +26,11 @@
   
   /* Styling for the body section */
   body {
+    .dropdown-mobile{
+      opacity: 0;
+      pointer-events: none;
+    }
+
     background-image: url("../images/background/stars.jpg"); /* Background image */
     background-repeat: no-repeat; /* Prevent background image from repeating */
     background-attachment: fixed; /* Fix the background image */
@@ -38,6 +43,7 @@
       position: absolute;
       top: 0.5vh;
       right: 1vh;
+      z-index: 9999;
   }
   
     #settingsImage {
@@ -460,13 +466,217 @@
     }
   }
   
-  /* Media queries for smaller screens */
-  @media only screen and (max-width: 768px) {
-    /* Adjustments for image title on smaller screens */
-    .image-title {
-      font-size: 0.5vh; /* Font size */
-      padding-top: 0vh; /* Padding top */
-      padding-bottom: 0vh; /* Padding bottom */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    header {
+        margin: 2vh 5vh 1vh; /* Margin */
     }
-  }
+    .hoidleNav {
+        margin: 0 5vh; /* Margin */
+    }
+    nav {
+        margin: 2vh 5vh 1vh; /* Margin */
+    }
+    .mainPart {
+        margin: 2vh 5vh 1vh; /* Margin */
+    }
+    .gallery {
+        margin: 2vh; /* Margin */
+    }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    header {
+        margin-left: 10vh;
+        margin-right: 10vh;
+        padding-bottom: 0;
+      h1{
+        font-size: 1.6vh;
+        text-align: center;
+      } 
+    }
+    .hoidleNav {
+        margin: 0 5vh; /* Margin */
+    }
+    nav {
+        opacity: 0;
+        position: absolute;
+    }
+
+    body{
+       /* Dropdown Button */
+    .dropbtn-mobile {
+      background-color: none;
+      padding: 1.6vh;
+      font-size: 1.6vh;
+      border: none;
+      width: 5vh;
+      height: 5vh;
+      max-width: 5vh;
+      max-height: 5vh;
+    }
+
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown-mobile {
+      position: absolute;
+      display: inline-block;
+      opacity: 1;
+      pointer-events: all;
+      z-index: 1000;
+      top: 0;
+      left: 0;
+
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content-mobile {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 25vh;
+      box-shadow: 0vh 0.8vh 1.6vh 0vh rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content-mobile a {
+      color: white;
+      background-color: black;
+      padding: 1.2vh 1.6vh;
+      text-decoration: none;
+      display: block;
+      border: 0.3vh solid white;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content-mobile a:hover {background-color: gray;}
+
+    /* Show the dropdown menu on hover */
+    .dropdown-mobile:hover .dropdown-content-mobile {display: block;}
+
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown-mobile:hover .dropbtn-mobile {background-color: rgba(255,255,255,0.2);} 
+
+      #settingsButton {
+      background: none;
+      border: none;
+      cursor: pointer;
+      position: absolute;
+      top: 0.1vh;
+      right: 3vh;
+      width: 5vh;
+      height: 5vh;
+      max-width: 5vh;
+      max-height: 5vh;
+      scale: 0.6;
+    }
+
+    .mainPart {
+      margin: 2vh 5vh 2vh; /* Margin */
+      .biggestAssText{
+        font-size: 5vh;
+      }
+      max-height: 80vh;
+    }
   
+    #settingsImage {
+        max-width: 10vh;
+        max-height: 10vh;
+        width: 10vh;
+        height: 10vh;
+    }
+  
+    #settingsOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+  
+    #settingsWindow {
+        position: absolute;
+        border-radius: 1vh;
+        background-color: black; /* Background color */
+        border: white 0.5vh solid; /* Border style */
+        border-radius: 3vh; /* Border radius */
+        width: 30vw;
+        max-width: 30vw;
+        max-height: 70vh; /* Set maximum height for the window */
+        overflow-y: auto; /* Enable vertical scrolling if content overflows */
+        color: white; /* Text color */
+  
+          & p {
+            max-width: 100%; /* Set maximum width for the paragraph */
+            word-wrap: break-word; /* Allow the paragraph to wrap text */
+          }
+        } 
+  
+        .toggle-switch {
+          display: inline-flex; /* Use inline-flex display to align items horizontally */
+        }
+      
+        .toggle-switch input {
+            display: none;
+        }
+
+        .toggle-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-bottom: 2vh; /* Adjust margin bottom as needed */
+      }
+      
+        .toggle-switch label {
+          display: block;
+          position: relative;
+          cursor: pointer;
+          width: 6vh;
+          height: 3.4vh;
+          background-color: #ccc;
+          border-radius: 3.4vh;
+          transition: background-color 0s;
+      }
+      
+        .toggle-switch input:checked + label {
+            background-color:black;
+            border: 0.3vh solid white;
+        }
+      
+        .toggle-switch label:before {
+            content:'';
+            position: absolute;
+            left: 0.2vh;
+            top: 0.2vh;
+            width: 2.8vh;
+            height: 2.8vh;
+            background-image: url('../images/icons/light-icon.png');
+            background-size: cover;
+            background-color: black;
+            border-radius: 50%;
+            transition: transform 0.3s;
+        }
+      
+        .toggle-switch input:checked + label:before {
+            transform: translateX(2.6vh);
+            background-image: url('../images/icons/dark-icon.png');
+            content: '';
+        }
+      
+        .settingsTitle {
+          font-size: 3vh;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          text-align: center;
+          position: absolute;
+          top: 0.1vh;
+          left: 40%;
+          transform: translateX(-50%);
+          width: 100%;
+      }
+    }
+}
