--- a/src/assets/css/legacy-darkTheme.css
+++ b/src/assets/css/legacy-darkTheme.css
@@ -29,6 +29,7 @@
     .dropdown-mobile{
       opacity: 0;
       pointer-events: none;
+      position: absolute;
     }
 
     background-image: url("../images/background/stars.jpg"); /* Background image */
@@ -505,7 +506,7 @@
 
     body{
        /* Dropdown Button */
-    .dropbtn-mobile {
+      .dropbtn-mobile {
       background-color: none;
       padding: 1.6vh;
       font-size: 1.6vh;
@@ -576,7 +577,12 @@
       .biggestAssText{
         font-size: 5vh;
       }
+
+      /*redo the table so its vertical rather than horizontal (meaning it fits) */
       max-height: 80vh;
+      p {
+        font-size: 1.5vh;
+      }
     }
   
     #settingsImage {
