--- a/src/assets/css/hoidle-lightTheme.css
+++ b/src/assets/css/hoidle-lightTheme.css
@@ -12,6 +12,18 @@ body {
     background-attachment: fixed; /* Fix the background image */
     background-size: cover; /* Cover the entire background */
     transition: background-image 2s ease-in-out; /* Transition effect for background image */
+
+    .dropdown-mobile{
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+    }
+
+    .header-mobile{
+        position: absolute;
+        opacity: 0;
+        pointer-events: none;
+      }
 }
 
 /* Styles for elements with the class 'flex-container' inside the body */
@@ -286,47 +298,61 @@ body nav .topnav .special-hoidle:hover {
     background-color: #f1f1f1; /* Background color */
 }
 
-#countryInputBox{
-    color: black;
-    background-color: white;
-    border: black 0.4vh solid;
-    padding: 1vh;
-    font-size: 2.5vh;
-    border-radius: 0.3vh;
-    margin-left: 73vh;
+#input{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 2vh;
 }
 
-#countryInputBox::placeholder{
-    color: black;
-    font-size: 2.5vh;
+#content{
+    position: absolute;
+    top: 15%;
 }
 
-#countryInputBox:focus{
-    outline: none;
+/* Apply existing styles */
+#countryInputBox {
+  color: black;
+  background-color: white;
+  border: black 0.4vh solid;
+  padding: 1vh;
+  font-size: 2.5vh;
+  border-radius: 0.3vh;
 }
 
-#countryInputBox:hover{
-    background-color: lightgray;
+#countryInputBox::placeholder {
+  color: gray;
+  font-size: 2.5vh;
 }
 
-#countrySubmitButton{
-    background-color: white;
-    color: black;
-    border: black 0.4vh solid;
-    padding: 1vh;
-    font-size: 2.5vh;
-    border-radius: 0.3vh;
-    cursor: pointer;
-    margin-left: 2vh;
+#countryInputBox:focus {
+  outline: none;
 }
 
-#countrySubmitButton:hover{
-    background-color: lightgray;
+#countryInputBox:hover {
+  background-color: antiquewhite;
 }
 
-#countryInputBox, #countrySubmitButton{
-    margin-top: 5vh;
+#countrySubmitButton {
+  background-color: white;
+  color: black;
+  border: black 0.4vh solid;
+  padding: 1vh;
+  font-size: 2.5vh;
+  border-radius: 0.3vh;
+  cursor: pointer;
 }
+
+#countrySubmitButton:hover {
+  background-color: antiquewhite;
+}
+
+/* Add margin-top to both elements */
+#countryInputBox,
+#countrySubmitButton {
+  margin-top: 5vh;
+}
+
 
 #content {
     background-color: antiquewhite; /* Background color */
@@ -405,3 +431,262 @@ body nav .topnav .special-hoidle:hover {
     border: 0.4vh solid black; /* Add border */
     border-bottom: none; /* Remove bottom border */
 }
+
+@media only screen and (max-width: 768px) {
+    nav {
+        opacity: 0;
+        position: absolute;
+        pointer-events: none;
+    }
+
+    #input{
+        display: flex;
+        justify-content: center;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin-top: 2vh;
+    }
+
+    /* Apply existing styles */
+    #countryInputBox {
+        color: black;
+        background-color: white;
+        border: black 0.4vh solid;
+        padding: 1vh;
+        font-size: 1.5vh;
+        border-radius: 0.3vh;
+    }
+    
+    #countryInputBox::placeholder {
+        color: gray;
+        font-size: 1.5vh;
+      }
+
+    #countrySubmitButton {
+        background-color: white;
+        color: black;
+        border: black 0.4vh solid;
+        padding: 1vh;
+        font-size: 1.5vh;
+        border-radius: 0.3vh;
+        cursor: pointer;
+        margin-left: 0.5vh;
+    }
+  
+    body{
+
+        .borderBottom {
+            border-bottom: 0.2vh solid black; /* Add bottom border */
+        }
+        
+        .borders{
+            border: 0.2vh solid black; /* Add border */
+            border-bottom: none; /* Remove bottom border */
+        }
+
+        #content {
+            background-color: white; /* Background color */
+            opacity: 90%; /* Opacity */
+            max-width: 75%;
+            border: black 0.2vh solid; /* Border style */
+            color: black; /* Text color */
+            display: table; /* Use table layout */
+            font-size: 1vh;
+            margin: 0; /* Center horizontally */
+            top: 17%;
+            left: 50%;
+            transform: translate(-50%); /* Center vertically and horizontally */
+        }
+
+        .window{
+            border: black 0.2vh solid; /* Border style */
+        }
+
+        .header-mobile{
+            position: relative;
+            opacity: 1;
+            border: black 0.5vh solid; /* Border style */
+            border-radius: 1.5vh; /* Border radius */
+            margin-top: 5%;
+            margin-left: 10vh;
+            margin-right: 10vh;
+            padding: 1vh 0; /* Padding */
+            background-color: antiquewhite;
+            color: black;
+    
+            .h2-mobile {
+                display: flex; /* Make the heading a flex container */
+                justify-content: center; /* Center align the content horizontally */
+                align-items: center; /* Center align the content vertically */
+                font-size: 3vh; /* Font size */
+            }
+        }
+
+         /* Dropdown Button */
+         .dropbtn-mobile {
+          background-color: none;
+          padding: 1.6vh;
+          font-size: 1.6vh;
+          border: none;
+          width: 5vh;
+          height: 5vh;
+          max-width: 5vh;
+          max-height: 5vh;
+        }
+    
+        /* The container <div> - needed to position the dropdown content */
+        .dropdown-mobile {
+          position: absolute;
+          display: inline-block;
+          opacity: 1;
+          pointer-events: all;
+          z-index: 1000;
+          top: 0;
+          left: 0;
+        }
+    
+        /* Dropdown Content (Hidden by Default) */
+        .dropdown-content-mobile {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 25vh;
+          box-shadow: 0vh 0.8vh 1.6vh 0vh rgba(0,0,0,0.2);
+          z-index: 1;
+          font-size: 2.8vh;
+        }
+    
+        /* Links inside the dropdown */
+        .dropdown-content-mobile a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          border: 0.3vh solid black;
+        }
+    
+        /* Change color of dropdown links on hover */
+        .dropdown-content-mobile a:hover {background-color: #ddd;}
+    
+        /* Show the dropdown menu on hover */
+        .dropdown-mobile:hover .dropdown-content-mobile {display: block;}
+    
+        /* Change the background color of the dropdown button when the dropdown content is shown */
+        .dropdown-mobile:hover .dropbtn-mobile {background-color: rgba(255,255,255,0.2);} 
+    
+          #settingsButton {
+          background: none;
+          border: none;
+          cursor: pointer;
+          position: absolute;
+          top: 0.1vh;
+          right: 3vh;
+          width: 5vh;
+          height: 5vh;
+          max-width: 5vh;
+          max-height: 5vh;
+          scale: 0.6;
+        }
+  
+    #settingsImage {
+        max-width: 10vh;
+        max-height: 10vh;
+        width: 10vh;
+        height: 10vh;
+    }
+  
+    #settingsOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+  
+    #settingsWindow {
+        position: absolute;
+        border-radius: 1vh;
+        background-color: antiquewhite; /* Background color */
+        border: black 0.5vh solid; /* Border style */
+        border-radius: 3vh; /* Border radius */
+        width: 30vw;
+        max-width: 30vw;
+        max-height: 70vh; /* Set maximum height for the window */
+        overflow-y: auto; /* Enable vertical scrolling if content overflows */
+        color: black; /* Text color */
+  
+          & p {
+            max-width: 100%; /* Set maximum width for the paragraph */
+            word-wrap: break-word; /* Allow the paragraph to wrap text */
+          }
+        } 
+  
+        .toggle-switch {
+          display: inline-flex; /* Use inline-flex display to align items horizontally */
+        }
+      
+        .toggle-switch input {
+            display: none;
+        }
+  
+        .toggle-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-bottom: 2vh; /* Adjust margin bottom as needed */
+      }
+      
+        .toggle-switch label {
+          display: block;
+          position: relative;
+          cursor: pointer;
+          width: 6vh;
+          height: 3.4vh;
+          background-color: #ccc;
+          border-radius: 3.4vh;
+          transition: background-color 0s;
+      }
+      
+        .toggle-switch input:checked + label {
+            background-color:antiquewhite;
+            border: 0.3vh solid black;
+        }
+      
+        .toggle-switch label:before {
+            content:'';
+            position: absolute;
+            left: 0.2vh;
+            top: 0.2vh;
+            width: 2.8vh;
+            height: 2.8vh;
+            background-image: url('../images/icons/light-icon.png');
+            background-size: cover;
+            background-color: white;
+            border-radius: 50%;
+            transition: transform 0.3s;
+        }
+      
+        .toggle-switch input:checked + label:before {
+            transform: translateX(2.6vh);
+            background-image: url('../images/icons/dark-icon.png');
+            content: '';
+        }
+      
+        .settingsTitle {
+          font-size: 3vh;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          text-align: center;
+          position: absolute;
+          top: 0.1vh;
+          left: 40%;
+          transform: translateX(-50%);
+          width: 100%;
+      }
+    }
+  }
+  
