--- a/src/assets/css/legacy-lightTheme.css
+++ b/src/assets/css/legacy-lightTheme.css
@@ -478,8 +478,15 @@ body {
       margin: 0 5vh; /* Margin */
   }
   nav {
-      opacity: 0;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  .topnav{
       position: absolute;
+      padding: 0;
+      margin: 0;
   }
 
   body{
