--- a/src/assets/css/legacy-darkInfoStyle.css
+++ b/src/assets/css/legacy-darkInfoStyle.css
@@ -225,3 +225,178 @@ body {
           height: 3vh;
       }
 }
+
+@media screen and (max-width: 768px){
+    body{
+        header {
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            position: absolute;
+            height: 6vh;
+            border: white 0.5vh solid;
+            border-radius: 1.5vh;
+            text-align: center;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 1.5vh;
+            left: 19.5%;
+            top: 2vh;
+            color: white;
+        }
+            /* Styling for the parent container */
+        .parent {
+            margin-top: 12vh;
+            display: flex;
+            flex-direction: column; /* Stack items vertically */
+            justify-content: center; /* Center items horizontally */
+        }
+            /* Styling for the image container */
+            .parent .image {
+                border: white 0.5vh solid;
+                border-radius: 1vh;
+                margin-bottom: 2vh; /* Add margin bottom for spacing */
+                width: 50%; /* Adjusted width for spacing */
+                max-width: 100%;
+                max-height: 50vh;
+                left: 50%;
+            }   
+    
+            /* Styling for the basicInfo container */
+            .parent .basicInfo {
+                border: white 0.5vh solid;
+                border-radius: 1vh;
+                margin-left: 22%;
+                margin-bottom: 2vh; /* Add margin bottom for spacing */
+                width: 50%; /* Adjusted width for spacing */
+                background-color: black;
+                opacity: 75%;
+                color: white;
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            }
+    
+            /* Styling for the heading */
+            .parent .basicInfo h2 {
+                text-align: center;
+                font-size: 3vh;
+                margin: 0; /* Remove margin to avoid extra space */
+            }
+    
+            /* Styling for paragraphs */
+            .parent .basicInfo p {
+                font-size: 2vh;
+                margin: 0; /* Remove margin to avoid extra space */
+                padding: 0.3vh; /* Add padding for spacing */
+            }
+
+            /* Styling for the goBackButton container */
+        .goBackButton {
+            margin-top: 2vh; /* Adjust margin top for spacing */
+            width: 50%;/* Adjusted width for spacing */
+            margin-left: 23.2%;
+        }
+    
+        /* Styling for the link */
+            .goBackButton .link {
+            border: white 0.5vh solid;
+            padding: 2vh;
+            background-color: black;
+            text-decoration: none;
+            color: white;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 4vh;
+        }
+
+        #settingsOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+      
+        #settingsWindow {
+            position: absolute;
+            border-radius: 1vh;
+            background-color: black; /* Background color */
+            border: white 0.5vh solid; /* Border style */
+            border-radius: 3vh; /* Border radius */
+            width: 30vw;
+            max-width: 30vw;
+            max-height: 70vh; /* Set maximum height for the window */
+            overflow-y: auto; /* Enable vertical scrolling if content overflows */
+            color: white; /* Text color */
+      
+              & p {
+                max-width: 100%; /* Set maximum width for the paragraph */
+                word-wrap: break-word; /* Allow the paragraph to wrap text */
+              }
+            } 
+      
+            .toggle-switch {
+              display: inline-flex; /* Use inline-flex display to align items horizontally */
+            }
+          
+            .toggle-switch input {
+                display: none;
+            }
+    
+            .toggle-container {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              margin-bottom: 2vh; /* Adjust margin bottom as needed */
+          }
+          
+            .toggle-switch label {
+              display: block;
+              position: relative;
+              cursor: pointer;
+              width: 6vh;
+              height: 3.4vh;
+              background-color: #ccc;
+              border-radius: 3.4vh;
+              transition: background-color 0s;
+          }
+          
+            .toggle-switch input:checked + label {
+                background-color:black;
+                border: 0.3vh solid white;
+            }
+          
+            .toggle-switch label:before {
+                content:'';
+                position: absolute;
+                left: 0.2vh;
+                top: 0.2vh;
+                width: 2.8vh;
+                height: 2.8vh;
+                background-image: url('../images/icons/light-icon.png');
+                background-size: cover;
+                background-color: black;
+                border-radius: 50%;
+                transition: transform 0.3s;
+            }
+          
+            .toggle-switch input:checked + label:before {
+                transform: translateX(2.6vh);
+                background-image: url('../images/icons/dark-icon.png');
+                content: '';
+            }
+          
+            .settingsTitle {
+              font-size: 3vh;
+              font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+              text-align: center;
+              position: absolute;
+              top: 0.1vh;
+              left: 40%;
+              transform: translateX(-50%);
+              width: 100%;
+          }
+    }
+}
